# unfold

./: .env.example  .gitignore  AI_SETUP.md  CONTRIBUTING.md  LICENSE  README.md  prompts.txt  pyproject.toml  requirements.txt  sequence_diagram.txt  test_basic.py  test_local_setup.py
examples/: basic_usage.py
tests/: __init__.py  test_database.py
unfold/: .unfoldignore  __init__.py  __main__.py  cli.py  mcp_server.py
unfold/cli/: interactive.py  main.py  ui.py  utils.py
unfold/cli/commands/: __init__.py  ai.py  index.py  mcp.py  monitor.py  search.py  stats.py
unfold/core/: __init__.py  database.py  graph_service.py  indexer.py  llm_service.py  mcp_service.py  mcp_tools.py  networkx_graph_service.py  searcher.py  vector_db.py
unfold/core/tools/: __init__.py  analysis.py  filesystem.py  memory.py  search.py  system.py  visualization.py
unfold/utils/: __init__.py  config.py
